# Changelog:
* Wed Feb 02 2011 Gianvacca
- mklivecd: full Italian translation achieved
- mkremaster: full Spanish translation achieved

* Thu Jan 13 2011 David Smid
- hwdetect2: fixed en_US.UTF-8 bug in get_locales_from_isolinux

* Wed Dec 29 2010 Mdawkins
- mklivecd: change the way the default kernel is found uname is not reliable inside chroots where the default 
            host OS can be different
- mklivecd: added correct path for root

* Sun Dec 26 2010 Gianvacca
- mkremaster: fixed fatal syntax error
- mkremaster: fixed wrong function call

* Sun Nov 21 2010 Gianvacca
- Makefile: extensive modifications aimed at maintenance (see make maintenance-help for a complete explanation). New rules:
-           make spec-update: to log your changes into the spec
-           make spec-merge: to merge back the new changelog into the spec template
-           make lang-update: to update all language files (pot and po)
-           make tar: to generate the tarball (also the specfile will be generated)
- Makefiles: output improved

* Fri Nov 19 2010 Gianvacca
- Provided mklivecd.in with i18n support

* Tue Nov 16 2010 Mdawkins
- Major code clean up
- Added switch for no splash
- Added check for aufs2 module
- Added check for memtest.bin and gfxboot

* Wed Nov 10 2010 Gianvacca
- Rules.mk - Corrected value of DEF_VGAMODE (791 instead of meaningless 792)
- mkremaster.in - Fixed few syntax errors
- Full Italian translation achieved

* Tue Nov 02 2010 Gettinther
- Fix location of /etc/sysconfig/finish-install
- Modify liverpm to fix ordering error between policykit, hal and dbus
- Make nosplash an option for building livecds
- Add nopat option by default
- Dropped standalone liveusb script, now fully integrated into mkremaster
- mkremaster.in - cleaned up screen messages and updated po files
- Full German translation achieved (thanks Yogibaer)
- Added po for French

* Sat Oct 23 2010 Gianvacca
- linuxrc.in - Modify search call to support unetbootin (patch from Gettinther)