@@ -7,3 +7,4 @@ Ivan Kerekes <ikerekes@gmail.com>
 Gettinther <gettinther@unity-linux.org>
 Matthew Dawkins <mattydaw@gmail.com>
 Alessio Adamo <gianvacca@unity-linux.org> (i18n stuff)
+JMiahMan <JMiahMan@unity-linux.org> (Maint. and Port to Mageia)
