@@ -1,3 +1,4 @@
 # $Id: README,v 1.6 2006/04/23 01:55:14 tom_kelly33 Exp $
 
+- Port from drakx system to dracut and open up for multi-distro use.
 - Localisation support (only 2 languages so far)
