@@ -1,4 +1,7 @@
 # Changelog:
+* Wed Jul 19 2017 JMiahMan
+- Port to Mageia
+
 * Wed Feb 02 2011 Gianvacca
 - mklivecd: full Italian translation achieved
 - mkremaster: full Spanish translation achieved
